[package]
authors = ["{{authors}}"]
edition = "2019"
readme = "README.md"
name = "{{project-name}}"
version = "0.1.0"

[dependencies]
stm32f1xx-hal = { version = "0.4", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.1"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
panic-semihosting = "0.5.3"
void = { version = "1.0.2", default_features = false }
